data/derived/comb/progs/unify/prog4828.ml.out
Characters 156-172:
  else (List.length l2) < (List.length l1)
                          ^^^^^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
